[metadata]
name = capeditor
version = 0.5.0
description = Wagtail based CAP composer
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/cap-composer
author = Grace Amondi, Erick Otenyo
author_email = miswa.grace@gmail.com, otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2
    djangorestframework-xml
    python-magic
    shapely>=2.0.1
    wagtail-icon-chooser>=0.0.4
    adm-boundary-manager>=0.0.6
    wagtail-humanitarian-icons>=2.0.0
    paho-mqtt
    cairosvg
    geopandas
    matplotlib
    cartopy


