[metadata]
name = capeditor
version = 1.0.0
description = Wagtail based CAP composer
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/cap-composer
author = Grace Amondi, Erick Otenyo
author_email = miswa.grace@gmail.com, otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    alertwise>=1.0.0


