[metadata]
name = alertwise
version = 0.6.4
description = Wagtail based weather warnings creations and dissemination tool
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/alertwise
author = Grace Amondi, Erick Otenyo
author_email = miswa.grace@gmail.com, otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2
    djangorestframework-xml
    python-magic
    shapely>=2.0.1
    wagtail-icon-chooser>=0.0.4
    adm-boundary-manager>=0.0.6
    wagtail-humanitarian-icons>=2.0.0
    wagtail-modelchooser>=4.0.1
    paho-mqtt
    xmltodict
    pdf2image
    wagtail-metadata
    lxml
    signxml
    django-celery-beat
    celery
    celery-singleton
    weasyprint
    requests
    pytz
    dj-database-url
    django-redis
    wagtail-lazyimages==0.1.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    alertwise = alertwise.manage:main