[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-composer"
authors = [
    { name = "Erick Otenyo", email = "otenyo.erick@gmail.com" },
    { name = "Grace Amondi", email = "miswa.grace@gmail.com" }
]
description = """Wagtail based weather warnings composing and dissemination tool, using Common Alerting Protocol (CAP) standard."""
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Wagtail"
]


[project.urls]
Homepage = "https://github.com/wmo-raf/cap-composer"
"Bug Tracker" = "https://github.com/wmo-raf/cap-composer/issues"

[tool.black]
exclude = """
/(
  | migrations
  | generated
)/
"""
# ensure consistent formatting for black
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#required-version
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#target-version
target-version = ["py311"]
required-version = "23"

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[project.scripts]
capcomposer = "capcomposer.manage:main"

#[tool.setuptools.package-data]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["capcomposer", "capcomposer.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "capcomposer.version.__version__" }
dependencies = { file = ["requirements/base.txt"] }